--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+如何评价用户Zeldovich Yakov? - Yuhang Liu的回答 <br>
+https://www.zhihu.com/question/357781684/answer/2546081833
+
+Yuhang Liu：
+混迹贴吧、人人、知乎、微信群等各大网络平台十余年，在数学话题下猛烈输出，但至今没有任何数学圈的人（包括科大学生和法国的华人数学学生）知道/确认他的真实身份，对他的网络隐身能力我还是很佩服的。我们一个500人的数学大群，再加若干个100-300人的数学八卦群（当然彼此有不小重合），没听说过任何一个人能拿出“Zeldovich Yakov就是xxx”的实锤的。堪称知乎数学神秘人中的第一桩悬案。
+
 AI 生成的回答，算是一种「预制菜」回答么？ - 酱紫君的回答 <br>
 https://www.zhihu.com/question/1952086151281205870/answer/1953470368393175960
 
