--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,11 @@
 
+OpenAI DevDay 震撼发布 GPT-5 Pro、App SDK 等五件套，有哪些亮点？ - 逆寒的回答 <br>
+https://www.zhihu.com/question/1958800584279814300/answer/1958938199792546598
+
+逆寒：xuesheng
+不知道为何知乎现在一股酸味，不说吹捧，至少也要实事求是，不知道是否因为很多大V都是竞争对手或者民族主义泛滥，我看到的大多数是毫无营养的反驳不屑和竞品的广告，这世界还真是文人相轻。Sora2的问题底下大多数看衰，人家产品已经冲上了美区苹果榜榜首。最开始的OPENAI模型很强，产品质量一般，之前第一个做出来的SORA第一版…阅读全文​
+
+-------
 如何评价用户Zeldovich Yakov? - Yuhang Liu的回答 <br>
 https://www.zhihu.com/question/357781684/answer/2546081833
 
