--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,4 +1,352 @@
 
+北京女大学生假扮名媛“白嫖”21天，细节曝光：对不起，我不想谴责她 - 莹宝i的文章 <br>
+https://zhuanlan.zhihu.com/p/411497783
+
+billwing：真名媛假扮假名媛
+
+帅叔叔：你就是那个要傍假名媛的保安吧
+
+夏目 > 问天者何人: 说得很好，下次不许说了
+
+说得很好 > 问天者何人: [好奇]
+
+小小白：其实她不需要自带化妆品，各大专柜就有免费试用装，而且有化妆镜，北京专柜那么多，足够21天全部的妆面了。直接去就好了，根本不需要你是名媛。而且各大商场还有免费小样投放。贵宾休息室不是谁都能免费进去的，她说自己打印了假的入场凭证，然后去酒店蹭健身房也是报了假的房间号，为什么不直接凭借自己一身名媛行头，说明来意，直接要求进贵宾室呢？如果工作人员不同意，那说明这些服务本身就不是对有钱人无偿提供的，而是对特定消费群体提供的。 用伪造凭证的方式换取资源，本质上是骗。骗子能骗来多少东西，大家也心知肚明。如果允许伪造和欺骗，那何止生存21天，生存210年都不是问题的。最后，唯一一点就是，我觉得利用无理由退换货蹭衣服穿，特意不剪吊牌，穿了几天又退掉，这是很不好的行为。
+
+猫布盗 > 小小白: 如果你穿的普通，不自信，贵宾室一定会有人来核验你的
+
+时予 > 小小白: 为什么吹毛求疵呢，她意识到的现象的确是真实广泛存在的。 眼高手低的人多去了，能有人做些几乎无害的事情唤起公众的思考很了不起。键盘侠才是最没意义的所在，他们自己啥也不会干，啥也干不成，就会泼冷水挑毛病，好像不管别人怎么能，他们只要能挑出一个毛病，人家就和他们待在一个水平线了似的。 然鹅，除了增加负面情绪，并没有什么卵用，批评嘲笑挑刺儿并不会使一个人成功，也不会根本上抹杀别人经历的人生。
+
+努力学习的桃子 > 小小白: 入场凭证去哪里打印
+
+知乎用户aKh1Lt > 猫布盗: 太真实了，我穿的光鲜亮丽进一个需要身份认证的大厦，但是我不是里面的员工，没有身份凭证，直接让保安给我开的门，保安也没bb什么。这时有一个女士跟着我进去了，我发现她把我当成了大厦里的工作人员
+
+猫布盗 > 知乎用户aKh1Lt: 哈哈，自信自带气场，很多事做起来自然而然。
+
+东篱夏 > 时予: 不是吹毛求疵，而是这个实验如果不需要她假装名媛，日常穿着体面或者说普通的我们想要去做也可以实现，那她这个假装名媛的举动就没有意义，而且直接导致了她想要表达的有钱人占有更多的社会资源这个观点不成立，而是脸皮厚的人可以侵占更多社会资源。
+
+时予 > 东篱夏: 她想表达的是奢华消费场所的虚荣荒谬看人下菜，她表达的是一个事实，相信身在其中的人都深有体会，至于是不是装名媛，这些行业场所不就是自己一味地追求这种消费群体才会产生文章中得证的荒谬可笑的结果的吗，这只是一场对重商主义急功近利的愚行的讽刺，很多著名的艺术作品也是这样表现的，比如奥黛丽赫本演的《窈窕淑女》。我实在看不出答主的作为有什么问题。 我想她的所谓“装名媛”的行为只是引起了某一类人的不适，虽然装名媛并不是她的目的而只是一种无奈的有效手段，但是这激发了对所谓上流生活可望不可及又无比艳羡的人的敏感——“如果你真的生来富贵也就罢了，你既然还敢装，你怎么可以这样…”哈哈，不过，话说话来，她要是不真有一些，你让她怎么装得如此像？！ 其实，那些《盖茨比》里的浮华生活，真的不是什么了不得值得向往甚至嫉妒得抓心挠肝的天上月亮，人不该任由物质的所谓差异来贬低自己同生为人的价值。身在污泥当不堕青云之志。为了物欲嫉妒是自贬也是丑陋的。
+
+东篱夏 > 时予: 不过被揭穿后坐牢已经出来了就是了，故事还被改编成了电影虚构安娜。
+
+时予 > 东篱夏: 她并没有真的大额不当得利，法定范畴是5000块，安娜和这个不是一个性质，在讽刺剧面前太没幽默感的永远是被刺痛的。
+
+东篱夏 > 时予: 我能看出来她的作品有从安娜的故事得到灵感，而不是你拿来对标的百万英镑跟窈窕淑女，其实我觉得整件事情最讽刺的点不是你说的她假装名媛被那么多人说她真名媛装假名媛扮真名媛，而是一个并没有能够说明什么的作品，有那么多人包括你去为她去辩护，这才是真正的讽刺。
+
+时予 > 东篱夏: 好吧，小公主说什么都对，毕竟我不是上赶着找别人麻烦的那个，又没人踩我尾巴。
+
+东篱夏 > 时予: 你说那么多刺痛啊，踩尾巴啊，我真的无法理解哪些人需要为她这个实验感到刺痛，富人为自己浪费资源感到愧疚？中产阶级对其表示艳羡？穷人因为享受不到这些资源感到痛苦？ 结合你说她要表达的观点，那就是这个过程中因为她的名媛身份给予她诸多便利的工作人员，是他们以貌取人、拜金主义给了她诸多便利，可是整个过程大家都只是在自己的岗位上正常工作，并没有出格行为，他们需要感觉到刺痛吗？他们的日常需要去分辨眼前这个人是真名媛假名媛吗？他们甚至不记得自己曾经服务过一个假装名媛得到他们服务的人。 我也说完了，越说越觉得这个实验失败啊。
+
+时予 > 东篱夏: 所以，假富豪耽误了掘金女吊凯子的收益率，假名媛耽误了奋斗本分小女生的……er……工作效率？！ ，哈，我只看见一只吃不到葡萄的小狐狸而已。
+
+happy > 时予:
+
+123 > 时予: 问题是她利用了什么呢？服务业的漏洞？难道每个商场应该像看贼一样去看着自己的客户？人们逐利的本能？那你看看你衣着光鲜能不能混进实验室，说白了那种能放你进去的地方基本也是你进去了也造不成人家什么损失。然后衣服不应该给客户退货的功能？人家大厂家为了客户体验，牺牲一两件衣服也就算在成本损耗里了，总不能因为一个混进去的人让所有顾客都不舒服。她这个实验说到底，靠的是看客们的脑补。作为毕业设计，这合格了，但是人性实验？远远达不到的。
+
+时予 > 123: 你读过马克吐温的《百万英镑钞票》吗……那好像是中学语文教材内容吧……中心思想是什么来着……讽刺资本主义在金钱面前虚伪软弱谄媚的本质 一切人类交换行为以及所有货币及资产，本质上都建立在【信心】二字之上……有本事让人相信其有偿还能力的人就能得到资本加持，迅速成长……那同样的，有本事让人相信她有充分潜在消费能力的消费者，自然可以得到免费试用的优待和邀请。 连商家都没觉得被这样的潜在顾客撸羊毛亏了（顶级豪车会match同级别其他品牌会员提供长达一周的免费试驾，顶级高奢酒店品牌的前台也会match其他几家同级别的会员直接给出VIP待遇，哪怕对方根本不是自己的会员———人家的格局是把这当作市场推广/针对性强的投放广告）。 其实所谓的不平衡不过是：【吃不到葡萄的抓心挠肝上蹿下跳】，原来以为有钱人都要花冤枉的大价钱才能享乐，现在发现竟然不用钱也能享乐……钱，没有就算了，反正已经习惯了；手段，还没有，岂不是要受到双重侮辱，两次伤害 …… 自己顺遂满意的人总是富有幽默感和包容心，过得自在愉快的人也从不成天找别人麻烦……与其临渊羡鱼（满世界挑刺儿，就见不得别人偏得）；不如退而结网（做好自己）。 当然了，有些人从来都解决不了自己，专门善于解决别人。躲在键盘后面口诛笔伐多容易，还能发泄戾气，（虽然现实中恐怕被欺负了连当面还嘴都不敢），自己努力/自我约束多辛苦。 卖鸟的都知道有种杜鹃鸟专门在别的鸟唱歌的时候，每次发出可怕的难听声音，时间一长一笼子的鸟就都再也不叫了……我不喜欢这种鸟。
+
+123 > 时予: 第一，我并不认为自己在解决别人，所以谢谢你关心我的心理健康，我有朋友，有队友，有导师，我也搞垮过班里霸凌的。马克吐温是大作家不是因为他文章的主题是批判社会，而是他描述的细腻的社会现象，他精妙的观察力和文笔。当然没有高大主题的作者有怎么会有毅力去观察这些。但是很显然当前这个案例并不具备这些，如果你觉得她的设计很好，你还是去看看同类的真正的社会学实验吧，真的，这个主题的，上至经济学，下至心理学，无数人复刻过，我可以说她这个就是毕业论文水平，远不到震动社会让人刺痛的地位。什么叫富有幽默感和包容心？你是指一个论文水平有问题，别人不可以说，原来只要做了作业就一定要给优？
+
+123 > 时予: 所以请不要说的好像我没知识没文化一样，你会觉得这个实验撼天动地，难道不是因为你没见过她的原版，和这个实验其实已经有多普及了吗？你这就好比我学硬件，我毕业做了个狗食投喂机，对于毕业生不错了，但是你看我和我导师说我要那专利开发布会，我导师绝对一口喷死我。
+
+123 > 时予: 顺便说一下，那个鸟叫噪鹃，鹃科和鸦科的动物都相对凶猛，所以小型鸟类并不是厌烦，而是畏惧，如果你自习观察，即便是我们喜爱的喜鹊在叫起来后周围其他的小鸟也多多少少会闭嘴，很少会有小鸟和喜鹊一起鸣叫的现象。
+
+时予 > 123: 哦，所以原来是同行相倾…… 我们业外人士只看到一个无伤大雅的讽刺性社会实践，算是个小女孩对现有奢侈品经营模式开的小玩笑。 至于你这同行一开始不表露身份上纲上线攻击一波人品，后边又改攻击专业性…… 这就…… 行吧，这件事儿到底踩到了哪条尾巴，只有疼的人自己清楚…… 毕竟专业红眼病是局部问题，怎么也好过整个人都红眼病……所以你看，严格来说没有一句话一种理念是不可讽刺和嘲弄的……键盘来、键盘去，有意义吗……你就算真觉得她这社会学实践水平拉胯，自己弄一个不拉胯的贴上去，也身体力行地拯救世界不是更好吗～^_^ 对了，几个月前一个就读于C9的小姑娘给我说起她的社会学研究生导师要求手里的几个研究生一个月的时间卧底调研交友网络……具体kpi好像比这个生猛……所以你看，这导师也在“玩弄人心”，也肯定道德沦丧专业拉胯……哎～～老子说：“以一个国家的治理来理解另一个国家的治理，以融入人间百态，来理解人间百态。”我这个外行倒是觉得这是社会学的一个好手段。 某些田都不肯下，脚都不沾泥的赵括小朋友，就是有多余的旺盛精神头对泥腿子指手画脚……
+
+玖苡希：我觉得这个当做毕设不是很好吗，不可否认点出了一些社会问题。
+
+说好的要努力：你TM换一个男生试试
+
+天行：第一天就歇菜
+
+恶语助人：百万英镑没看过吗？
+
+ggBoy：男的也行吧！关键看“她和妈妈给爸爸买礼物”那里，她本身就是名媛啊！换成男的就是名媛装名媛北京漂流记换成公子装公子北京漂流记
+
+啊包：男的，就需要气质和年龄了。
+
+功德林斗猪士 > 恶语助人：你怎么不说《逍遥法外》
+
+Dick Cowboy：也可以啊 戴个假的劳或者百达翡丽，穿一套假的爱马仕，配个假宾利钥匙，再搭一个懂名媛圈的三十岁左右的帅哥，应该也可以
+
+登峰造极：换成吴亦凡这样长相和打扮的穿套爱马仕西服一样可以。
+
+阿寻：男的也可以
+
+凉拖：有一个逃兵扮军官的电影根据真实事件改编
+
+西北再北满天星 > 恶语助人：关键百万英镑人家是真钱啊
+
+说实话：很屌丝的我基本在海底捞之类也能享受同样待遇，其实不是因为名媛，还是因为这些地方服务态度本来就好
+
+小小白：她这个创意视频我觉得立意不错。但是，对不起，她在大兴国际机场洗手台里洗脚的视频和在zara利用无理由退换白嫖衣服穿真的令我不适
+
+nxkdnslnewl：令人不适的有太多，作为消费者，作为劳动力，温水煮青蛙，你自己没感觉到大环境而已
+
+nxkdnslnewl：品牌会从消费者心理，生理的特性来策划营销，诱导消费，她这不是利用品牌逐利的心理满足个体需求吗 品牌会从消费者心理，生理的特性来策划营销，诱导消费，她这不是利用品牌逐利的心理满足个体需求吗[doge]
+无节制消费的元凶：计划报废，观念植入(迭代观念，一次性消费观念)，产品升级(高度沉迷，高脂高糖，这些都与个体健康有害)
+
+卯薇尔薇拉因尔：我担心柜子落了
+
+阿达达达达达达：可怕…没有道德还有称之为艺术…
+
+柯蓝本蓝：这也太扯了，搞这一套又是睡酒吧又是蹭宜家，你人力成本付出的代价都已经很贵了，根本就是失败的实验 这怎么看都是网红公关文[doge]
+
+人间不值得：你拿毕业设计来公关吗？好大的官威啊
+
+AAinslin：自己试一试就知道什么体验了？？？
+
+来日方长：睡沙发，蹭免费的零食，这不就是讨饭么？和高雅的生活有一毛钱关系吗？
+
+Lina杨: 哈哈哈哈哈哈哈哈哈
+
+卯薇尔薇拉因尔: 那是因为法律，如果报备了玩得更大
+
+带着天乐看世界: 普通人是讨饭，名媛就是行为艺术
+
+知乎用户us11UA: 我也觉得 这女的纯粹扯犊子
+
+程雪龙: 本身课题就不是“享受”高雅的生活呀 课题本身是是：毕业后没工作无法生活的时候，利用高雅人士的剩余物资生活
+
+15223878041: 打印假机票 就已经犯法了
+
+ok不提交：
+很多前后矛盾。比如其实那时候，她的衣服已经很脏了，甚至裤子口袋里还有一块融化的黄油。身上也黏糊糊的，都能搓起泥。就这形象是怎么冒充名媛的呢？
+
+草莓棉花糖 > ok不提交:
+蹭了几天宜家，在哪洗澡呢？衣服那么脏，还能混进去，我也觉得很矛盾。
+
+人间不值得 > 草莓棉花糖:
+不是说进了三次酒店大浴池吗？
+
+把嘴缝上：
+这些东西本来就是免费的，需要假装一番去骗吗？
+
+lamya > 把嘴缝上:
+这当然不是免费的，这些都是附加服务，为你的消费提前预支服务。当免费去蹭本身就是骗。
+
+GG更好 > 把嘴缝上:
+但是普通人怎么知道这些免费的东西呢？
+
+南城街 > 全体:
+我很佩服这位女生大胆尝试的勇气和对社会的思考。很多地方都有试吃，公园长椅也能睡觉，路边水池也能洗脸。做到白嫖21天并不难。引人深思的是——怎样做到“高雅的”嫖。
+看似分文没花，完全得益于这位女生精致的颜值、高贵的谈吐、优雅的气质、与生俱来的自信、化险为夷的智慧、开阔的眼界、以及对奢侈品牌的了解和穿搭常识。
+而这些基本都来自她优越的家庭和丰厚的资源。
+试想一个皮肤黝黑、对品牌一无所知的普通女孩，还能“高雅”白嫖吗？
+评论里说“真名媛扮假名媛”，我认为并不是贬损。朱门酒肉臭，路有冻死骨。冻死骨即便冻死，也吃不上朱门的剩酒剩肉；能吃上的，本身就在朱门里。
+这种残酷的社会现实或许正是这位女生要留给我们思考的。
+
+yh lin > 全体:
+这很无聊。不需要名媛的身份也能混得差不多，又不是她这二十几天真的享受到了名媛的生活待遇。
+
+程雪龙 > yh lin:
+您说的“差不多”，是指最后那个睡麦当劳的男的呗？
+
+晴天 > 全体:
+有一个很大的前提条件是——必须长得美、身材好。换个人早就被轰出去了。
+
+OOBLECK > 全体:
+她还可以去王府井百货试试。即使穿T恤和拖鞋进去、提前说明啥都不买，也能把一楼化妆品都试遍。
+我觉得北京就是单纯的大气，工作人员也大气，不卑不亢、礼貌客气，也很少有人计较这些小事。
+再说谁会特意占这三瓜两枣的便宜？时间才是最昂贵的。
+
+梦笔兰亭 > 全体:
+她那是真名媛假扮名媛。
+
+开朗的小羊 > 全体:
+我记得她这个是毕设，最后还向店家说明并赔偿了。
+
+天涯麦克 > 全体:
+满嘴跑火车，瞎编。
+
+李易 > 全体:
+其实在于自信和提前踩点。平时就有这样的真生活，去的地方只要衣冠整齐、普通人自信一点也是能达到的，不需要名媛身份。
+
+龙域兔兔 > 全体:
+照片谁拍的？
+
+li-li > 龙域兔兔:
+大哥慧眼。
+
+虎胆雄心 > 全体:
+所有成功的人，都是成功的骗子。先骗己再骗人。自己不相信自己，就不会让别人相信你；一旦别人被你的气质吸引，就会轻易相信你。被相信之后，钱自然就来了。
+
+yung > 全体:
+你换个男的试试，直接给你撅派出所去。
+
+秀秀 > yung:
+你太小看男人了。百度一下各种类似案子，男同胞的“战斗力”会打破你的三观。
+
+比比卡兽：
+以后我去坑蒙拐骗也说自己是在做社会实验。
+
+阳光哥：
+这么拼？
+
+momo：
+我觉得顶多算是整活，说它是作品和艺术太高估了。没有艺术性。
+
+知乎用户bCaJ2i > momo：
+反映社会现实。还没艺术性？
+
+momo > 知乎用户bCaJ2i：
+我穿着普通衣服在上流社会交际场合就在那里一站，（举个例子）啥也不干，然后别人就看不起我，那么这个也是反映社会现实，也是个行为艺术。然后我再放个屁，光明正大的那种，那些富人人放屁却要畏畏缩缩，而我却光明正大，是不是还讽刺了他们的虚伪，更加艺术了？然后你再去看一本书叫《百万英镑》。和这个一样，它最后表达了对拜金社会的讽刺，但这个东西最后得出了“瞬间拥有和永恒差不多”的结论。
+
+知乎用户bCaJ2i > momo：
+确实啊，但你敢做敢发布出来吗？知道为何《百万英镑》那么火吗？因为稀有。目前国外很多这种片子，但是中国没有，这个女生起码是第一个敢拍这样的片子的，然而你们非要打压？
+
+momo > 知乎用户bCaJ2i：
+所以是整活。
+
+momo > 知乎用户bCaJ2i：
+打压大可不必，我没那么大能量。而且把这个东西抬高那么高只能说明没见识。整活我觉得挺好，有意思，我也觉得她挺有勇气，挺勇敢，但你说它是艺术这一点我不同意，请搞清楚我的意思别曲解。
+
+momo > 知乎用户bCaJ2i：
+外国确实有反映社会现实的东西，但改变了吗？改变这种东西写在马克思主义哲学里还有《毛选》里，而不是这个视频。而且她最后得出的结论是“瞬间拥有的和永恒的没啥两样”。
+
+momo > 知乎用户bCaJ2i：
+和《百万英镑》讽刺社会现实差了不止多少，还要把它抬得那么高。基于社会资源剩余的概念得出了一个“瞬间拥有的和永恒没什么区别”，真让人疑惑啊，好反映现实啊。
+
+虎虎 > 知乎用户bCaJ2i：
+故事毫无真实性，三观不正，很荣耀吗？照你说，你解释这一个月她洗澡怎么办？跑哪去蹭洗澡水去？
+
+烤鱼来一串：
+当代艺术的定义现在已经相当广泛了。不要说这种，我在央美读的时候同学还有用五花肉做衣服的。我很喜欢一位老师说当代艺术是一种现象，不要以传统艺术的眼光去审视它。艺术能够引发思考甚至社会问题已经是非常有价值了。
+
+momo > 烤鱼来一串：
+实验艺术究竟是不是艺术还有待观察，反正我认为顶多是在整活。
+
+momo > 烤鱼来一串：
+正是这样，所以现在的艺术类都爱搞跨学科，大谈经济、哲学。这种“艺术家”才是社会的过剩资源吧。
+
+烤鱼来一串 > momo：
+现在的艺术大体可以分为两类，一类是偏向感官的，另一类就是跟哲学高度结合的概念艺术。早在20世纪杜尚就声称艺术是生活本身，今天更是大可不必这么狭隘。
+
+momo > 烤鱼来一串：
+确实，药水哥和阿giao也是艺术，他们也是“艺术家”。
+
+momo > 烤鱼来一串：
+这个标准是人定的，这种东西就是每个人看法和认为的不一样。你也不能强行改变我的看法，我也不改变你的。我还是认为她就是在整活，没有一点艺术性。
+
+momo > 烤鱼来一串：
+这种“艺术家”，我不喜欢，你也别强迫我不讨厌这种东西。谢了。
+
+烤鱼来一串 > momo：
+我并没有让你喜欢，我也没说我喜欢。你可以说自己不喜欢，但评判好坏是否具有艺术性，需要专业知识的支持，而不是想当然。
+
+momo > 烤鱼来一串：
+所以按照专业的标准它是艺术？而专业的标准是谁制定的？实验艺术有没有艺术性？获得了多少人的认可呢？学术界说实验艺术是不是艺术没有定论，但你又说艺术不能狭隘。我看到挺多答主都认为它不是艺术，而他们也是专业人士，所以到底从专业上来讲它不是艺术。而不是你个人的主观臆断。你说你具有专业性，你又没有权威证明，人家那些答主比你有权威性的多吧。
+
+momo > 烤鱼来一串：
+而且这个水货毕业论文不应该被拿出来讨论。有这么大热度，一堆人来讨论来讨论去的，这才是最艺术的地方。这下好了，一个优秀毕业论文跑不了。说它是欺诈艺术吧又不逻辑完善，说它揭露了社会现象吧，它得出个结果“瞬间拥有的和永远没两样”。真艺术。不管从专业角度讲还是啥，它都不是艺术。
+
+momo > 烤鱼来一串：
+一些美院学生爱搞出一些浅薄的哲学、社会学内涵的“艺术作品”，偏偏还作为优秀作品出现。老师真不知怎么想的，可能是为了出名吧，毕竟老师可能也没受过相关系统教育。也是水货。
+
+烤鱼来一串 > momo：
+我从来没说她作品水不水。我质疑你的断言本身从头到尾都没有提供相关论述。
+央美教授周至禹说过：我不轻易判断作品好坏，但就具体的问题在一类流派中总归可以分出好坏。艺术的好坏常常指向表现主题和技术，并且如果我这样判断就必须言明依据和标准，否则我只能说“喜欢”和“不喜欢”。
+“不管从专业角度讲还是啥”——你从专业角度讲一个？
+
+烤鱼来一串 > momo：
+那些认为它没有艺术性的博主自己有专业的知识和判断依据与标准，但你没有。你只靠一张嘴定义别人为水货却不知道水在哪里，甚至自己更水。
+
+momo > momo：
+我说了呀，你没认真看嘛。通过社会资源生产剩余得出一个“瞬间拥有的和永恒的没啥两样”的结论，没有内涵。你尊重下我的评论，而不是自己说自己的。还有她的行为也只能说明一点——北京治安真的挺好的。还有作品具有独创性，没看过马克·吐温的《百万英镑》吧？我批判她还有一点就是一群人把这个东西捧上神坛，说它具有时代意义，笑死。因为我真的见过。你把我拉黑了，只能回复我自己了。我说了水在哪，你却视而不见，真有意思。
+
+柳宿葉室 > 烤鱼来一串：
+对一个思维已经有定式、且蜜汁自信喜欢评价水不水的人解释艺术多样性，本身就是多余的。
+
+nxkdnslnewl：
+我倒是想听听你所谓的“艺术性”是什么？它的具体表现、具备属性有哪些、边际是什么、判断依据是什么？
+
+nxkdnslnewl > momo：
+自己设计实验假定结果，还需要大众按你的思路解读。个人理解当做社会共识，到底是举例失当，还是哗众取宠？对于艺术的界限划分我不清楚，不过有一点可以肯定——“我认为”“我觉得”代表不了艺术。
+
+柳宿葉室 > nxkdnslnewl：
+歇了吧你。“我认为”“我觉得”恰恰是艺术创作最基本的必要视角。这个作品标榜是公共艺术了吗？一个学生做个实验作品表达她自己的思索不能“我认为我觉得”？就得考虑大众的理解？可这还不是商业艺术。你理不理解不妨碍作者表达。不喜欢就是不喜欢，没有作品有义务让所有人喜欢。你也不用肯定你的肯定，显得格外不值钱。
+
+柳宿葉室 > momo：
+来，你给我讲讲社会学在人类人文艺术的表达范围之内吗？社会学这种只能研究过去式的边缘学科什么时候骄傲到可以凌驾于国油版雕史五大专业八大美院之上了？社会学有专业的大学吗？什么叫浅薄的哲学？存在主义浅不浅？虚无主义深不深？你意思“瞬间不能永恒”伪物理不辩证唯物主义不水特深奥？你可笑死我了。
+
+nxkdnslnewl > 柳宿葉室：
+你所谓的“艺术”，是小圈子的意淫自嗨吧？
+
+柳宿葉室 > nxkdnslnewl：
+小圈子？但凡是个九年义务制教育、小时候学过点兴趣爱好、受过点艺术熏陶、有过点美术教育的人，估计都在你说的这圈子里吧。还觉着自己挺清醒，您是真秀儿。
+
+Elaine：当有一天，社会资源不再受限于身份和规则。
+那才是真正的“物尽其用”。
+最后一段，可能吗？如何实现？
+
+小庙：想到了一个英语课文，一个有一亿支票的假富翁靠人们的尊敬变成真富豪的故事
+
+草莓棉花糖：一百万吧
+
+zcyvtcyvy12138：分地方吧，有youtuber在台北也做过类似实验，穿名媛衣服或者运动服进奢侈品店，结果店员都一视同仁的无视
+
+知乎用户zYlgZk：感觉无聊
+
+知乎用户：羊毛出在羊身上，别人以为她是消费者才能白嫖
+
+舒欣：我觉得如果作为社会实验的话，还应该出一个对照组，路人脸、支支吾吾的小女生，和邹做一样的事，能在北京生存21天吗？
+
+Springer丶：身体，是革命的本钱。
+
+老果：机场的休息室不是头等舱休息室，票价190不可能，是付费的嘉宾休息室，谁花钱都可以进，休息室门口前台有核验，但是第二天也混进去了，前台没核出来说不过去。
+同时并没有看到有人引领。
+个人觉得都在理解范围之内，没有大节奏。
+
+努力学习的桃子：不付费怎么弄
+
+张岳威：后人：这就是著名的“邹雅琪实验”吗？
+
+佳佳：[握手][握手][握手]这是姐呀！有空让小姐姐带带我[捂脸][捂脸]
+
+敷故：【美女假扮名媛出入高级场所，身无分文混吃混喝21天，竟无一人察觉-哔哩哔哩】b23.tv/1LULmA，你好，你的文章似乎被人用了[捂脸]
+
+斩魂：满是谎言和欺诈行为的实验能成为艺术?
+
+踌水：共产主义什么时候才会真正的到来？
+
+游戏人生：图片好像不能看到
+
+什么都不知道：行为艺术了属于是
+
+日暮西山里：vip休息室记得是扫机票的吧？
+
+南强：什么叫高雅的生活？？！！！
+
+漂洋过海到北极：心动了
+
+李嘉图：测试内容值得深思，但测试过程中应该去除颜值这个天然优势[尴尬][尴尬]
+
+小太阳哥哥：猫鼠游戏男主：也就小学生水平吧
+
+知乎用户bCaJ2i：别拿电影和现实比。
+
+小太阳哥哥：知乎用户bCaJ2i 但凡知道猫鼠游戏原型就说不出这话
+
+正能量你潘哥：名媛[飙泪笑]
+
+冯澄：哇哦
+
+稀罕事了属于是：有意思，学到了，吾辈楷模
+
+是因为这种情况就像：扮乞丐可以过的更久！
+
+来知乎找答案：为什么仙女棒很熟悉
+
+林枫：这一切都是基于她是一个颜值颇高的假名媛，换个丑一点或者男人试试。吃霸王餐，哼，阿康，来把人给我叉出去。[捂脸][捂脸][捂脸]
+
+星空：她是中产以上家庭的人，信息来源比其下层更广。
+
+南城街：哈哈哈哈[捂脸]当龟公还债
+
+l寂佐疯：天生丽质难自弃
+
+学无止境：隔这社会工程学呢
+
+--------
 作者曾就费希特关于“论学者本质”的讲座中哲学部分，撰写了一篇评论文章，该文发表于耶拿《普遍文学报》第150和151期。当时，作者尚不知晓另外两部费希特著作的存在——这两部书几乎同时出版，而他只是偶然通过一份目录才得知它们的存在，却偏偏未曾亲眼见到这份目录。在阅读了《时代特征纲要》与《极乐生活指南》之后，作者意识到，自己此前那篇评论虽可独立评判所评之书的价值或无价值，但其内容并未涵盖费希特思想发展的最新立场。因为费希特本人的思想已从一部著作发展到另一部，不断推进；如今，其思想内部显现出一种并非单一、而是双重乃至三重的差异性：即《极乐生活指南》的作者与其自身，在最初形态上的区别，以及与《埃尔兰根讲座》作者身份之间的区别，更进一步地，与《时代特征纲要》作者身份之间的差异，都变得极为清晰。
 
 正是这一观察，以及作者因费希特思想中那种独特的综合倾向而陷入的特殊处境——既被其吸引又对其保持批判——促使他决定撰写一篇更为详尽的阐述，以厘清这种关系。
