--- a/text/长文1.md
+++ b/text/长文1.md
@@ -182,6 +182,47 @@ yung > 全体:
 阳光哥：
 这么拼？
 
+远去的六号楼：这叫做作品？？
+
+李毅：一个央美大四学生难不成能有毕加索的水平？太高看她们了。有那么点自己的思考也算可以了，毕竟社会阅历浅。
+
+知乎用户1Zaj0h：我看得fail[捂脸]，没有任何实际意义。这些东西她吃不吃都在那里，富人交奢侈税供起来的。这么简单的道理
+
+nxkdnslnewl：这个应该可以叫做社会实验，结果是什么不重要，最重要的是大众对该现象的思考。知之为知之，不知则百度，这没意义，那没意义，判断理由呢，“书读太少，专业外白痴一个！”
+
+燕赵风轻：因为她本来就是真名媛，有这个底气。
+
+真·蒙面加菲猫：再大胆一点，何止能白嫖21天，还能赚个车。
+
+语冰：再赚个有钱男友[惊喜]
+
+PeterPan：挺酷的，当然她得是真的21天没花钱，展现了这些地方的虚伪
+
+虎虎：你搁这卡bug呢？就问你洗澡咋办？[大笑]
+出去一天不到六个小时就会感觉饿，尤其靠双脚去行走。
+半天下来风尘仆仆，全身油腻，汗臭满身。
+你这个骗子。
+
+天落：五星级酒店考虑形象，好像是不允许有人在大堂睡觉
+
+墨家文化复兴社：一个美女，在绝大多数地方，都是可以享有特权的，几乎没人会反感
+
+啊包：大堂一般有好多等候区 稍微前面的 就是给人坐和休息的哪怕你不住这个酒店 是给住酒店客户的亲属朋友准备的。如果说流浪汉睡在上面肯定是不行的。 保安看他一身奢侈品和好的妆容，还敢睡觉那么自然。他们也就不会怀疑什么。
+
+在天堂仰望深渊：其实乞丐吧的老哥更溜，只不过他们没走高端路线
+
+sq123：百万英镑
+
+RichardZhangWBS：同意
+
+Luis：我也试过扛着楼梯混进电影院看免费电影，从未失手。因为我真的就是一个维修工，上了楼梯我真敢拧灯泡。
+
+连先生：哈哈哈，真透彻的对比，真修理工扮假修理工；真名媛扮假名媛
+
+小星星：震惊：资本们的剩余价值居然被薅[滑稽]
+
+虎胆雄心：所有成功的人，都是个成功的骗子，先骗己再骗人，自己不相信别人，就更不会相信自己，相信了，别人就会为你的气质所倾倒，一旦被你的气质所倾倒，别人就会轻易的相信你，一旦相信你，这不钱不就大把的来了
+
 momo：
 我觉得顶多算是整活，说它是作品和艺术太高估了。没有艺术性。
 
