--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,18 @@
 
+WCG2009 魔兽争霸Ⅲ决赛 Infi vs Fly100% 王者心态 11.15   <br>
+https://www.bilibili.com/video/BV1j34y1a767/?p=9
+
+机制落后是不是魔兽争霸3落寞的重要原因？ - 无牙子的回答  <br>
+https://www.zhihu.com/question/1919719201519670999/answer/1920275030610278043
+
+无牙子：
+无所不通无所不晓 最重要的问题是操作的困难。一般情况下一个选手每分钟有效操作至少得200多次，同时控制大约三十个单位，而且单位分远近和英雄，还需要操作他们的主动技能。这个操作量真的挺大的
+
+机制落后是不是魔兽争霸3落寞的重要原因？ - knighticerose的回答  <br>
+https://www.zhihu.com/question/1919719201519670999/answer/1920040763535909960
+
+knighticerose：war3最大的问题是投入与回报不成正比，你苦练一个月rts对战，结果也仅仅只是个刚入门水平，跟高手打甚至连他一个兵都杀不掉。
+
 OpenAI DevDay 震撼发布 GPT-5 Pro、App SDK 等五件套，有哪些亮点？ - 逆寒的回答 <br>
 https://www.zhihu.com/question/1958800584279814300/answer/1958938199792546598
 
