--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 10.9：
 
+豆腐脑和嫩豆腐是一回事吗？豆腐脑我喜欢吃甜的，不喜欢吃咸的。炒嫩豆腐我喜欢吃咸的，有一次炒的时候忘记加盐了，出锅后再加盐和酱油搅拌，很难吃。
+
+------
 关于美观和实用谁先谁后的问题，一般我们都会认为实用是美观的实现手段，但最近我好像有点感觉美观是实用的实现基础。
 
 ------
