--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,37 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.20
+最新 10.9
 
+王菲 - 约定
+
+作词: 林夕
+作曲: 陈小霞
+编曲: Adrian Chan
+
+还记得当天旅馆的门牌<br>
+还留住笑着离开的神态<br>
+当天整个城市 那样轻快<br>
+沿路一起走半里长街<br>
+还记得街灯照出一脸黄<br>
+还燃亮那份微温的便当<br>
+剪影的你轮廓太好看<br>
+凝住眼泪才敢细看
+
+忘掉天地 仿佛也想不起自己<br>
+仍未忘相约看漫天黄叶远飞<br>
+就算会与你分离 凄绝的戏<br>
+要决心忘记我便记不起<br>
+明日天地 只恐怕认不出自己<br>
+仍未忘跟你约定假如没有死<br>
+就算你壮阔胸膛 不敌天气<br>
+两鬓斑白都可认得你
+
+还记得当天吉他的和弦<br>
+还明白每段旋律的伏线<br>
+当天街角流过你声线<br>
+沿路旅程如歌褪变
+
+------
 ![浊流](../pic/sub/chuanguo.JPG)<br>
 ![我梦](../pic/sub/yanxu.JPG)<br>
 
