--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1581,10 +1581,10 @@ https://www.zhihu.com/question/1900991406127932994/answer/1903502183082730251
 幻想教堂里头那场婚礼 <br>
 是为祝福我俩而举行 <br>
 
-一路从泥泞走到了美景 <br>
-习惯在彼此眼中找勇气 <br>
-累到无力总会想吻你 <br>
-才能忘了情路艰辛 <br>
+**一路从泥泞走到了美景** <br>
+**习惯在彼此眼中找勇气** <br>
+**累到无力总会想吻你** <br>
+**才能忘了情路艰辛** <br>
 
 你我约定难过的往事不许提 <br>
 也答应永远都不让对方担心 <br>
