--- a/text/歌词.md
+++ b/text/歌词.md
@@ -26,10 +26,10 @@
 就算你壮阔胸膛 不敌天气<br>
 两鬓斑白都可认得你
 
-还记得当天吉他的和弦<br>
-还明白每段旋律的伏线<br>
-当天街角流过你声线<br>
-沿路旅程如歌褪变
+**还记得当天吉他的和弦**<br>
+**还明白每段旋律的伏线**<br>
+**当天街角流过你声线**<br>
+**沿路旅程如歌褪变**
 
 ------
 ![浊流](../pic/sub/chuanguo.JPG)<br>
