--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,56 @@
 
 最新 10.9
 
+罗志祥 - 精舞门
+
+作词: 陈镇川<br>
+作曲: Daniel Bedingfield<br>
+编曲: 吕绍淳<br>
+
+预备起 行头全部要带齐 点名<br>
+准备跟我上街去游行<br>
+Body 今天要证明<br>
+什么舞通通都搞的定<br>
+跌烂你眼镜
+
+小老弟 年轻耍酷那一丁点本领<br>
+洗耳恭听 快卯起来 学习<br>
+大发善心收徒弟<br>
+想要学习皮要绷紧<br>
+要跟我跟紧<br>
+
+I wanna know 你行不行<br>
+You gotta know<br>
+别怀疑你自己的本领<br>
+You gotta know 我是冠军<br>
+You gotta know we got a show<br>
+
+我有一条特别了不起的神经<br>
+越跳越带劲<br>
+无师自通任督二脉畅通无比<br>
+十八般舞艺
+
+铃铃 听说你想要报名 考虑<br>
+有没有那根筋<br>
+我看一眼就搞定<br>
+凡事都要照规定<br>
+精舞门里什么都 Ging<br>
+不浪得虚名
+
+不能乱吃冰淇淋蒙眼睛<br>
+对待所有的敌人都尊敬<br>
+大半夜上床戴耳机<br>
+节奏当催眠的声音<br>
+做梦都不停
+
+I wanna know 你行不行<br>
+You gotta know<br>
+别怀疑你自己的本领<br>
+We wanna know 谁是冠军<br>
+We gotta know we got a show<br>
+We are the world
+
+------
 王菲 - 约定
 
 作词: 林夕
