--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+《毛泽东传》对建国以来几个重大历史问题的研究  <br>
+https://www.dswxyjy.org.cn/n1/2019/0621/c423733-31173722.html
+
+逄先知：防止出修正主义、防止资本主义复辟，成为毛泽东晚年思考和担心的焦点。用他的话来说，这是“新的中心课题”。他怕出修正主义，怕资本主义复辟，怕干部严重脱离群众，变成“官僚主义者阶级”，一句话，怕党和国家改变颜色。这就是毛泽东发动“文化大革命”的根本出发点和主观动机。有一次他对身边护士说：“我多次提出问题，他们接受不了，阻力很大。我的话他们可以不听，这不是为我个人，是为将来这个国家、这个党，将来改变不改变颜色、走不走社会主义道路的问题。我很担心，我这个班交给谁我能放心。我现在还活着呢，他们就这样！要是按照他们的做法，我以及许多先烈们毕生付出的精力就付诸东流了。我没有私心，我想到中国老百姓受苦受难，他们是想走社会主义道路的。所以我依靠群众，不能让他们走回头路。建立新中国，死了多少人？有谁认真想过？我是想过这个问题的。”
+
+-------
 WCG2009 魔兽争霸Ⅲ决赛 Infi vs Fly100% 王者心态 11.15   <br>
 https://www.bilibili.com/video/BV1j34y1a767/?p=9
 
