--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 10.9：
+最新 10.10：
 
+毛泽东：历史上许多资产阶级革命家英勇牺牲，他们也不是为个人的眼前利益，而是为他们这个阶级的利益，为这个阶级的后代的利益。
+
+------
 豆腐脑和嫩豆腐是一回事吗？豆腐脑我喜欢吃甜的，不喜欢吃咸的。炒嫩豆腐我喜欢吃咸的，有一次炒的时候忘记加盐了，出锅后再加盐和酱油搅拌，很难吃。
 
 ------
