--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
 
+一九六六年的五十天：记忆与遗忘的政治<br>
+https://www.aisixiang.com/data/400.html
+
+我是没有下去蹲点的。有人越蹲点越站在资产阶级方面反对无产阶级。
+
 《毛泽东传》对建国以来几个重大历史问题的研究  <br>
 https://www.dswxyjy.org.cn/n1/2019/0621/c423733-31173722.html
 
