--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,32 @@
 
+没有深思熟虑就无法治理臣民，没有言语表达就无法陈述思虑。近来我谈论过多，结果造成烦扰，对人轻慢骄傲，恐怕就是由此而来。身体精神心气，并非因此而劳累。现在听到正直的言论，我愿意虚心接受并改正。
+
+听说法师（指玄奘）到遥远的地方求法访道，现在已经回来了，我无比欢喜，请立即前来与我相见。那些懂得梵语和经义的外国僧人，也可以一起带来。我已经命令于阗等地的使者护送法师，人力车马应该不会缺乏，命令敦煌的官员在流沙迎接，鄯善在沮沫迎接。
+
+从前蔺相如是列国的宰相，汉朝皇帝还寻求他的后代；管仲是霸主的大臣，魏国君主还礼敬他的坟墓。何况那些正直之道超越青松般孤高，忠勇的操守如白玉般光彩照人的人呢！商朝的少师比干，忠贞表率，为臣的品德与生俱来，以明智诚信的度量，遭遇昏暗的时代。国家危急如快马奔驰，他哀痛国家的衰败；君主将亡如宝衣将焚，他惋惜君主的覆灭。见到正义绝不退缩，怀着忠心践行节操。正直的话刚说出口，就轻视百年的生命；暴虐的刑罚施行后，粉碎了七尺之躯。虽然周武王为他封墓，也无法挽救他被焚烧的灾祸；孔子称赞他的仁德，也难以逃脱剖心的痛苦。他的冤屈深重千古，悲痛连接苍天。我巡视赵北，征讨辽东，经过朝歌的废墟，缅怀比干的墓地。停车瞻仰荒凉的陵墓，希望他能做我的臣子；抚摸自身想到九泉之下的他，想听到他的谏言。怎能让尽忠的大义在史册中长久缺失，让扬名的典范在后世无人知晓。应该赐予恩宠，以表达我的心意。追赠他为太师，谥号"忠烈公"。派遣三品官员持节祭告，四品官员为副使，加封其墓，修缮祠堂。州县在春秋两季用少牢（猪羊）祭祀，拨给附近五户人家负责祭祀和洒扫。
+
+天下的根本在于太子，四方的光明依靠继承人。既有传承的道理，必须承担监国辅政的重任。能够光大前人的功业，与人共同守护国器，不只是君父的独自亲近，而是让天下百姓共同拥戴。我思念先帝（指其父），身着丧服居丧，近来因为疾病，未能康复。残余的贼寇还在威胁，中原地区战事频繁，军国大事必须参与决策。因此寄望于太子，恭敬地继承宗庙。皇太子豫，天赋聪明，日益增进圣德，在中兴朝廷大业上已有大功。在寝宫问安，能知晓天下大事；在军事上制胜，才能超过五品官员。现在正值艰难时期，按礼制正在服丧期间，因此把政务委托给太子，应该让他暂时监理国政。
+
+你们的奏报，我看后十分悲痛感慨。天地运转，世事多变，战乱绵延已久，流血成河，令人追悔无及。这份忧愁，将伴我终身，不止一日。我的哀伤，发自内心，并非为了外表装饰。如今军务重大，不容拖延。
+当年周武王讨伐殷纣，在征途中设庙祭祀先王，虽然略违小礼，却成就了大孝。古人的道理，岂能不遵从呢？因此我上效古风，下顺众意。提笔写到这里，心如刀割，悲痛难忍。
+
+从古以来，武备肇始于轩辕黄帝，他在阪泉之野亲自率兵征战；唐尧以七德之师平定丹水之乱。历代明君，莫不以兵除暴，以仁救世，开疆拓土，使威德远播天下。
+我继承祖宗洪业，平定四方，使天下归一，六合之内皆为一家，日月照临，无所不及。可是海外岛夷作乱，残杀他们的君主，祸及朝鲜，灾害波及濊貊之地。那些幼弱孤苦的百姓无法承受暴政，那些忠义之士仰望我朝希望救援。
+我心中常怀忧虑，夜不能寐，于是亲自驾御战车，手执金鼓，亲率大军出征。用杀伐来止息杀伐，以仁德惠及众生；用正义之师清肃刑法，以义兵平定祸乱。
+愿凭天意行事，主持公道，擒获奸邪，安定边疆。出此“善兵”，实属不得已，乃是奉天行罚，于是下令出征。
+
+首先命令行军大总管英国公李勣、行军总管张俭等人，率领精锐之师，大军启行。北狄、西戎的首领都任将帅，奚、霫、契丹的士兵都编为甲卒，猛士如云，战马成群，聚集辽东城下，攻打其南面。
+又命副大总管江夏郡王李道宗、第一军总管虢国公张士贵等，率领五陵的劲骑，统领六郡的良家子弟，从西面进攻。并命前军大总管夔国公宏基等，分统猛士，填塞敌壕，进逼城下。
+
+贼人据险固守，筑高堞以抵御，激水环绕以为防。他们凭险不惧。于是我军四面围合，掘地道九处并攻，危城很快失守，护城池也不再成险。敌人仍死守残垒，以尸骨筑墙，以幕棚苟延残喘；又将尸骨堆积沟中，坐待焚烧。
+我怜悯他们陷于涂炭，多次劝降，他们仍执迷不悟。于是众将士怒发冲冠，纷纷叩马请战，请求立即乘势一举歼灭。难违众意，我遂下诏许之。
+
+命令诸军分道并进，四面合围。我登高远望，亲自发号施令，又命检校太常卿鄂国公秦琼率领军中乐队，奏《元云》之雅乐。将帅闻乐，士气大振。
+此时冻雨初晴，寒风骤起，命各军纵火，火势四起。敌楼城堞尽为灰烬，全城男子皆束手就擒，押赴军门。首领渠魁交付刑官处置，千年积寇，一朝荡平。
+
+这一切，皆赖宗庙神灵庇佑，上天幽冥助我。忠臣良将竭尽谋略，勇士壮夫奋不顾身；民力同心，方成此大功。岂是我一人之力所能成就！如今既已大获全胜，普天同庆，应当将此捷报颁行天下，使人人皆知。
+
+-------
 面对像刚才那样的提醒，他们认为可以通过以下方式确保自己的安全。知识学理论确实提出了一个建议，当然这只是一个初步的、家庭式的方法，适用于那些尚未将清醒状态变成自然状态，而是在清醒和不清醒之间交替的人。这个建议是，在面对这类固定反思形式的产物时，他们应该意识到他们正在思考所思考的东西。那些人很清楚，如果他们接受这个建议，他们心爱的幻觉就会消失，他们希望视为自在之物的东西就会明显地表现为一个纯粹的思想。因此，他们坚持在这一点上绝不应该让他们进行反思；他们声称，正是通过一贯地执行那个准则，知识学理论变成了一个空洞的反思系统，因此，正如实际情况一样，整个反思形式崩溃成绝对的虚无，因为那个系统所隐藏的技巧正是在正确的地方闭上眼睛，伸出手去抓住现实。
 
 他们完全忽视了这样一个事实：完全独立于他们对思考行为的反思或不反思，这个思考行为本身保持原样，并且必然受到他们执行它时所处的限制形式的影响。面对盲目性，闭上眼睛是一个糟糕的办法。因此，在上述情况下，他们的绝对者，他们除了认为它存在之外无法以其他方式思考它，始终是一个客观的、从观察中投射出来的、在其本身中与之对立的东西，通过自身和在其本质中；无论他们是否明确地设定与之对立的观察：如果他们只完成了这种客观化，他们只思考了存在本身，而绝不是他们声称的绝对者；或者如果他们仍然想要思考后者，那么他们在一般存在之内，通过与非绝对存在的第二重对立，完成了进一步的规定，他们的绝对者是一般存在内的特殊存在，他们的思考是以特定方式分析-综合的，因为只有通过这样的思考，他们声称拥有的概念才能形成，无论他们是否认识到这一点。
