--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,57 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 10.9
+最新 10.10
 
+梁静茹 - 暖暖
+
+作词: 李焯雄
+作曲: 人工卫星
+编曲: 洪敬尧
+
+都可以随便的<br>
+你说的我都愿意去<br>
+小火车摆动的旋律<br>
+都可以是真的<br>
+你说的我都会相信<br>
+因为我完全信任你<br>
+细腻的喜欢<br>
+毛毯般的厚重感<br>
+晒过太阳熟悉的安全感<br>
+分享热汤<br>
+我们两支汤匙一个碗<br>
+左心房暖暖的好饱满<br>
+
+我想说其实你很好<br>
+你自己却不知道<br>
+真心的对我好<br>
+不要求回报<br>
+爱一个人希望他过更好<br>
+打从心里暖暖的<br>
+你比自己更重要<br>
+
+你说的我都愿意去<br>
+回忆里满足的旋律<br>
+都可以是真的<br>
+你说的我都会相信<br>
+因为我完全信任你<br>
+细腻的喜欢<br>
+你手掌的厚实感<br>
+什么困难都觉得有希望<br>
+我哼着歌<br>
+你自然的就接下一段<br>
+我知道暖暖就在胸膛
+
+我想说其实你很好<br>
+你自己却不知道<br>
+从来都很低调<br>
+自信心不高<br>
+爱一个人希望他过更好<br>
+打从心里暖暖的<br>
+你比自己更重要<br>
+
+我也希望变更好
+
+------
 罗志祥 - 精舞门
 
 作词: 陈镇川<br>
