--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,10 @@
 2025年想法：
 
-最新 10.10：
+最新 10.11：
 
+有些绝大部分理性人都明白的大道理我应该少讲，我应该多讲那些基本没有人注意到但又非常重要的点。
+
+------
 毛泽东：历史上许多资产阶级革命家英勇牺牲，他们也不是为个人的眼前利益，而是为他们这个阶级的利益，为这个阶级的后代的利益。
 
 ------
