--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,50 @@
 
 最新 10.11
 
+Christine Welch - 一百万个可能
+
+作词:Christine Welch
+作曲:Skot Suyama
+
+幽静窗外满地片片寒花<br>
+一瞬间永恒的时差<br>
+窝在棉被里<br>
+倾听踏雪听沉默的声音<br>
+飘雪藏永恒的身影<br>
+雪树下等你
+
+在一瞬间有一百万个可能<br>
+该向前走或者继续等<br>
+这冬夜里有百万个不确定<br>
+渐入深夜或期盼天明<br>
+云空的泪一如冰凌结晶了<br>
+成雪花垂<br>
+这一瞬间有一百万个可能<br>
+窝进棉被或面对寒冷
+
+幽静寒风吹来一缕声音<br>
+一瞬间看着你走近<br>
+暖了我冬心<br>
+倾听踏雪听沉默的声音<br>
+飘雪藏永恒的身影<br>
+雪树下等你
+
+那晚上会是哪个瞬间<br>
+说好的爱会不会改变<br>
+而你让我徘徊在千里之外<br>
+yeah你让我等待好久baby<br>
+突然间那是哪个瞬间<br>
+你终于出现就是那个瞬间<br>
+等了好久忍不住伸手那个瞬间
+
+这一瞬间有一百万个可能<br>
+暖这冬心或面对寒冷<br>
+该向前走或者继续等<br>
+渐入冬林或走向街灯<br>
+窝进棉被或面对寒冷<br>
+暖这冬心或面对寒冷
+
+------
 ![闪光](../pic/sub/paizhao.JPG)<br>
 
 -------
