--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,33 @@
 
+火药这个我们军事活动的重要媒介，其效果纯粹是通过经验认识的，直到今天，人们仍在不断地通过实验来更精确地研究它。一颗通过火药获得每秒1000英尺速度的铁弹会粉碎它在飞行中接触到的所有生物，这当然是不言而喻的，不需要经验；但有多少附带情况更精确地决定了这种效果，其中一部分只能通过经验来认识。而且物理效果并不是我们需要考虑的唯一效果；我们寻求的是道德效果，而认识和评估它的唯一方法就是经验。在中世纪，当火器刚刚发明时，由于装置不完善，物理效果自然比现在小得多，但道德效果却大得多。人们必须亲眼见过波拿巴在其征服事业中训练和指挥的那些部队在最猛烈和持续的炮火中的坚定性，才能理解一支在长期危险中锻炼出来、通过丰富的胜利达到了对自己提出最高要求这一崇高原则的部队能够做到什么。仅凭想象是永远不会相信的。另一方面，众所周知的经验是，今天在欧洲军队中仍有像鞑靼人、哥萨克人、克罗地亚人这样的部队，他们的队伍每次都会被几发炮弹击散。但没有一门经验科学，因此战争艺术理论也不能够始终让其真理伴随着历史证明；部分是因为仅仅由于篇幅问题就不可能，部分也是因为很难在个别现象中证明经验。
+
+如果在战争中发现某种手段曾经非常有效，它就会被重复；一个人模仿另一个人，它成为时尚，这样，它基于经验进入使用并在理论中占据其位置，理论满足于一般地引用经验来指出其起源，而不是为了证明它。但当经验要被用来取代一种常用手段、确立一种有疑问的手段或引入一种新手段时，情况就完全不同了；这时必须提出历史上的个别例子作为证明。
+
+如果仔细考察历史例子的使用，会产生四个容易区分的视角。
+
+首先，可以将其用作思想的纯粹说明。在任何抽象考察中，都很容易被误解或根本不被理解；当作者担心这一点时，历史例子可以为思想提供缺失的光明，确保作者和读者保持一致。
+
+其次，它可以作为思想的应用，因为在一个例子中有机会展示那些在思想的一般表达中不能全部包含的较小情况的处理；因为这正是理论与经验之间的区别。
+
+这两种情况是真正的例子；以下两种属于历史证明。
+
+第三，人们可以引用一个历史事实来支持所说的内容。在只需要证明某种现象或效果的可能性的所有情况下，这都是足够的。
+
+最后，第四，可以从历史事件的详细描述和几个事件的汇编中得出某种教训，这种教训在这种证据本身中找到其真正的证明。
+
+在第一种使用中，通常只需要简单提及案例，因为只是单方面地使用它。历史真实性本身是次要的，一个虚构的例子也可以；只是历史例子总是更实用，能够使它们所说明的思想更接近实际生活。
+
+第二种使用需要更详细地描述案例，但准确性仍然是次要的，在这方面要说的与我们在第一种情况下所说的相同。
+
+在第三种使用中，通常只需要指出一个无可置疑的事实就足够了。如果提出在某些条件下加固阵地可以实现其目的的主张，只需要提到本策尔维茨阵地就可以支持这一主张。
+
+但如果要通过历史案例的描述来证明某种普遍真理，那么这个案例必须在所有与主张有关的方面得到精确和详细的发展，必须在读者眼前仔细地构建起来。这越难实现，证明就越弱，就越需要用案例的数量来弥补单个案例证明力的不足，因为人们有理由假设，那些无法指出的具体情况在一定数量的案例中会相互抵消其影响。
+
+如果要从经验中证明骑兵最好站在步兵后面而不是旁边，在没有决定性优势的情况下，无论是在战斗中还是在战区，无论是战术上还是战略上，用分散的纵队远远包围敌人都是极其危险的，那么在第一种情况下，仅仅提到几场骑兵在侧翼的失败战斗和几场骑兵在步兵后面的胜利战斗是不够的，在后一种情况下，仅仅提到里沃利或瓦格拉姆战役，提到1796年奥地利人对意大利战区的进攻或同一战役中法国人对德国战区的进攻是不够的，而必须通过精确追踪所有情况和个别事件来证明那些阵型和进攻形式如何本质上导致了失败的结果。然后也会显示出这些形式在多大程度上是应该被否定的，这必须一起确定，因为完全普遍的否定无论如何都会违背真理。
+
+我们已经承认，当详细说明事实不可行时，可以通过例子的数量来补充缺失的证明力，但不可否认，这是一个危险的出路，经常被滥用。人们满足于仅仅触及三四个案例，而不是一个非常详细说明的案例，从而获得强有力证明的假象。
+
+-------
 没有深思熟虑就无法治理臣民，没有言语表达就无法陈述思虑。近来我谈论过多，结果造成烦扰，对人轻慢骄傲，恐怕就是由此而来。身体精神心气，并非因此而劳累。现在听到正直的言论，我愿意虚心接受并改正。
 
 听说法师（指玄奘）到遥远的地方求法访道，现在已经回来了，我无比欢喜，请立即前来与我相见。那些懂得梵语和经义的外国僧人，也可以一起带来。我已经命令于阗等地的使者护送法师，人力车马应该不会缺乏，命令敦煌的官员在流沙迎接，鄯善在沮沫迎接。
