--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 10.11：
 
+做文娱管理工作，一纸禁令很简单，想要做出优秀的示范却很难。现在国家队的音乐和影视创作是不是也衰落了？的确很多年轻人不喜欢国家队的艺术风格，但国家队保持稳定的水准能极大带动更多优秀的创作，而不是现在各种烂片横行。
+
+------
 很多绝大部分理性人都明白的大道理我应该少讲，我应该多讲那些基本没有人注意到但又非常重要的点。
 
 ------
