--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,49 @@
 
 最新 10.11
 
+吉特巴 - 火辣辣的军营火辣辣的兵
+
+作词:侯汉瑜
+作曲:老兵
+
+火辣辣的天空 火辣辣的云<br>
+火辣辣的大地 火辣辣的风<br>
+火辣辣的军营 火辣辣的兵<br>
+火辣辣的热血 火辣辣的情<br>
+练兵 习武 为打赢 哎<br>
+我们是对对火辣辣的兵<br>
+练兵习武为 打赢 哎<br>
+我们都是火辣辣的兵<br>
+哎嗨哟 呀 儿哟<br>
+哎嗨哟 呀儿哟<br>
+火辣辣的热血火辣辣的情<br>
+哎 嗨哟 呀儿哟<br>
+哎嗨哟 呀儿哟<br>
+火辣辣的军营 火辣辣的兵<br>
+一切为打赢！嗨！<br>
+（火辣辣的天空 火辣辣的云<br>
+火辣辣的大地 火辣辣的风<br>
+火辣辣的军营 火辣辣的兵<br>
+火辣辣的热血 火辣辣的情 ）<br>
+练兵习武 为打赢 哎<br>
+（练兵习武为打赢哎）<br>
+我们是对对火辣辣的兵<br>
+（我们是对对火辣辣的兵 哎）<br>
+练兵习武为打赢哎<br>
+（练兵习武为打赢哎）<br>
+我们都是火辣辣的兵<br>
+哎嗨哟 呀儿 哟<br>
+哎嗨哟 呀 儿哟<br>
+火辣辣的热血火辣辣的情<br>
+哎 嗨哟 呀儿哟<br>
+哎 嗨哟 呀儿哟<br>
+火辣辣的军营 火辣辣的兵<br>
+一切为打赢！嗨！
+
+一切为打赢！（嗨）
+一切为打赢！为打 赢！！！（嗨）
+
+-------
 Christine Welch - 一百万个可能
 
 作词:Christine Welch
