--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -2,7 +2,7 @@
 为什么总有人捧矢作康介踩岸本齐史？ - 许多的小兵器的回答 <br>
 https://www.zhihu.com/question/401755061/answer/1332088808
 
-许多的小兵器:总体而言，矢作康介担任《火影忍者》编辑期间（开始-自来也战佩恩前后），整体故事走向确实非常平稳。
+许多的小兵器：总体而言，矢作康介担任《火影忍者》编辑期间（开始-自来也战佩恩前后），整体故事走向确实非常平稳。
 
 ------
 一九六六年的五十天：记忆与遗忘的政治<br>
