--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,23 @@
 
+世界科学简析24：中学教师奋斗记：乔治-西蒙-欧姆 - 弗鲁斯德狄叶仑的文章  <br>
+https://zhuanlan.zhihu.com/p/687403173
+
+弗鲁斯德狄叶仑：欧姆把塞贝克温差电池的两个接头分别接入100℃的沸水和0℃的冰块中，稳定电压有了保障。然后又将电池接入电流扭秤，这样就可以进行电流和电压的关系推算。为了研究的方便，欧姆把物体阻碍电流大小的能力称为电阻。
+
+既然电压表是根据欧姆定律造的，那欧姆一开始怎么发现电流跟电压成正比？ - 天籁之声的回答  <br>
+https://www.zhihu.com/question/464542128/answer/1938449977
+
+天籁之声：
+一个漂泊的孩子
+1.欧姆验证欧姆定律的方法
+欧姆不是用电压表验证的欧姆定律，因为当时还没有电压表，但当时有验电器和静电计这些电势差检测装置，所以欧姆管电势差叫验电力, 也叫电压（Spannung/tension）。
+
+欧姆定律是如何推导出来的？ - 火星的回答 <br>
+https://www.zhihu.com/question/465311890/answer/2772304818
+
+火星：欧姆提出欧姆定律是比较坎坷的。
+首先需要了解，欧姆在182x年开始开始开展寻找欧姆定律的工作，在182x年代，并没有所谓的电阻，电压的概念，只有比较模糊的电流的概念。
+
 为什么总有人捧矢作康介踩岸本齐史？ - 许多的小兵器的回答 <br>
 https://www.zhihu.com/question/401755061/answer/1332088808
 
