--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,12 @@
 
+为什么麦克斯韦方程组理论上可以解所有电磁学问题? - Lloyd的回答  <br>
+https://www.zhihu.com/question/652405954/answer/1927724676743929870
+
+Lloyd：
+这组公式为啥这么牛？
+因为这是Heaviside，一个业余物理学爱好者➕工程师把26个偏微分方程用laplacian operator浓缩成四个公式的 。并且形式上有一种我说不出来的美感。
+基本上光学，电磁学，半导体，材料学，电路分析所有理论公式都是这26个推出来的。
+
 世界科学简析24：中学教师奋斗记：乔治-西蒙-欧姆 - 弗鲁斯德狄叶仑的文章  <br>
 https://zhuanlan.zhihu.com/p/687403173
 
